# vsrocq

./: .gitattributes  .gitignore  MCP.md  README.md  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  publish-extension.yml  publish-server.yml
client/: .gitignore  .vscodeignore  MCP-TODO.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  yarn.nix
client/goal-view-ui/: package.json  vite.config.ts
client/media/: style.css
client/pp-display/: package.json  vite.config.ts
client/search-ui/: index.html  package.json  tsconfig.json
client/src/: Decorations.ts  QuickFixProvider.ts  client.ts  configuration.ts  (+4 more)
docs/: developers.md  mcp.md  protocol.md
language-server/: .gitignore  .ocamlformat  Makefile  vscoq-language-server.opam  vsrocq-language-server.install  vsrocq-language-server.opam  vsrocq-mcp-server.opam
language-server/bm/: bridge.ml  bridge.mli  completionSuggester.ml  completionSuggester.mli  dune  dune.in
language-server/bridge/: completionSuggester.ml  documentManager.ml  documentManager.mli  dune  dune.in
language-server/common/: dune  dune.in  execOverview.ml  execOverview.mli  log.ml  log.mli  rawDocument.ml  rawDocument.mli  scheduler.mli  types.ml
language-server/dm/: README.md  checkingManager.ml  checkingManager.mli  completionItems.ml  completionSuggester.ml  completionSuggester.mli  delegationManager.ml  delegationManager.mli  document.ml  document.mli  documentManager.ml  documentManager.mli  dune  dune.in  execOverview.ml  execOverview.mli  executionManager.ml  executionManager.mli  folding.ml  folding.mli  log.ml  log.mli  parTactic.ml  parTactic.mli  priorityManager.ml  proverThread.ml  proverThread.mli  queryManager.ml  queryManager.mli  rawDocument.ml  rawDocument.mli  scheduler.ml  scheduler.mli  types.ml  utilities.ml  vsrocqtop_proof_worker.ml  vsrocqtop_tactic_worker.ml
language-server/dm/indices/: README.md
language-server/dm/indices/9.2/: attrindex.json  cmdindex.json  exnindex.json  optindex.json  tacindex.json
language-server/dm/indices/9.3/: attrindex.json  optindex.json  tacindex.json
language-server/etc/: rocq-wrap-coqc.sh
language-server/host/: Hpp.ml  State.ml  config.ml  delegationManager.mli  dm.ml  dm.mli  documentManager.ml  documentManager.mli  dune  dune.in  hLoc.ml  hostTypes.ml  hostTypes.mli  im.mli  interactionManager.mli  log.ml  types.ml  vsrocqtop_tactic_worker.ml
language-server/host/bm/: bridge.ml  bridge.mli  completionSuggester.ml  dune  dune.in
language-server/host/common/: dune  dune.in  scheduler.ml
language-server/host/dm/: document.ml  document.mli  dune  dune.in
language-server/im/: delegationManager.ml  delegationManager.mli  dune  dune.in  executionManager.ml  executionManager.mli  parTactic.ml  parTactic.mli  vsrocqtop_proof_worker.ml  vsrocqtop_tactic_worker.ml
language-server/language/: dune  dune.in  hover.ml
language-server/mcpserver/: args.ml  args.mli  dune  dune.in  mcpBase.ml  mcpBase.mli  mcpManager.ml  mcpPrinting.ml  mcpProtocol.ml  vsrocqTools.ml  vsrocqmcp.ml
language-server/protocol/: dune  dune.in  extProtocol.ml  lspWrapper.ml  ppProofState.ml  printing.ml  printing.mli  proofState.ml  proofState.mli  settings.ml
language-server/tests/: README.md  common.ml  d_perf.ml  d_tests.ml  dm_tests.ml  dune  dune.in  em_tests.ml  folding_tests.ml  goals.ml  mcp_tests.ml  rd_tests.ml  s_tests.ml  utils.ml
language-server/tests/callgraph/: README.md  dune  run.t  static_callgraph.ml  static_callgraph_safe_barriers.txt  static_callgraph_whitelist.txt
language-server/vscoqtop/: lspManager.ml
language-server/vsrocq_boot/: args.ml  args.mli  dune.in  vsrocqBoot.ml  vsrocqSettings.ml
language-server/vsrocqtop/: args.ml  args.mli  dune  dune.in  lspManager.ml  vsrocqSettings.ml  vsrocqSettings.mli  vsrocqtop.ml
(+87 files in other folders)
