opam-version: "2.0"
name: "vscoq-language-server"
maintainer: "Enrico Tassi <enrico.tassi@inria.fr>"
authors: [ "Enrico Tassi" "Maxime Dénès" "Romain Tetley" ]
license: "MIT"
homepage: "https://github.com/rocq-prover/vsrocq"
bug-reports: "https://github.com/rocq-prover/vsrocq/issues"
dev-repo: "git+https://github.com/rocq-prover/vsrocq"
depends: [
  "vsrocq-language-server" {= version}
]
synopsis: "Compatibility meta package for the VsRocq language server after the Rocq renaming"
available: arch != "arm32" & arch != "x86_32"
