opam-version: "2.0"
name: "vsrocq-mcp-server"
maintainer: "Enrico Tassi <enrico.tassi@inria.fr>"
authors: [ "Kacper Korban" ]
license: "MIT"
homepage: "https://github.com/rocq-prover/vsrocq"
bug-reports: "https://github.com/rocq-prover/vsrocq/issues"
dev-repo: "git+https://github.com/rocq-prover/vsrocq"

build: [
  [make "dune-files"]
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "ocaml" { >= "4.14" }
  "dune" { >= "3.5" }
  (("coq-core" { ((>= "8.18" < "8.21")) }
    "coq-stdlib" { ((>= "8.18" < "8.21")) })
  | "rocq-core" { ((>= "9.0+rc1" < "9.3~") | (= "dev")) } )
  "yojson"
  "jsonrpc" { >= "1.15"}
  "ocamlfind"
  "ppx_inline_test"
  "ppx_assert"
  "ppx_sexp_conv"
  "ppx_deriving"
  "sexplib"
  "ppx_yojson_conv"
  "ppx_import"
  "ppx_optcomp"
  "memprof-limits"
  "result" { >= "1.5" }
  "lsp" { >= "1.15"}
  "sel" {>= "0.6.0"}
]
conflicts: [
    "vscoq-language-server" {< "2.2.7~"}
]
synopsis: "VSRocq language server"
available: arch != "arm32" & arch != "x86_32"
description: """
VSRocq based MCP server
"""
x-maintenance-intent: ["(latest)"]
